--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,14 +23,15 @@
         </activity>
 
         <activity android:name="com.myroom.activity.CreateRoomActivity"
-            android:label="Create Room"
             android:parentActivityName=".activity.MainActivity">
         </activity>
 
         <activity android:name="com.myroom.activity.RoomDetailActivity"
-            android:label="Room Detail"
             android:parentActivityName=".activity.MainActivity">
+        </activity>
 
+        <activity android:name=".activity.GeneralSettingActivity"
+            android:parentActivityName=".activity.MainActivity">
 
         </activity>
     </application>
