Implement CreateBillActivity and its layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,11 @@
             android:parentActivityName=".activity.GeneralSettingActivity">
 
         </activity>
+
+        <activity android:name=".activity.CreateBillActivity"
+            android:parentActivityName=".activity.MainActivity">
+
+        </activity>
     </application>
 
 </manifest>
